Added template tasks handling
