# src/main/handlers/tasks.js
@@ -1,0 +1,5 @@
+import { getTemplateTasks } from "../controllers/tasks.controller";
+
+module.exports = {
+  get: getTemplateTasks
+};
